--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,9 @@
         "laravel/sanctum": "^3.2",
         "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.8",
-        "laravel/ui": "^4.6"
+        "laravel/ui": "^4.6",
+        "symfony/css-selector": "^7.2",
+        "symfony/dom-crawler": "^7.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
